# DroneControlSystem

./: CMakeLists.txt  README.md  mmake  package.xml
autonomous_agent/: CMakeLists.txt  README.md  objective1.bag  objective2.bag  objective3.bag  offer1.yaml  offer2.yaml  offer3.yaml  package.xml  publish_msgs.sh  setup.py  test_demand.yaml  test_offer.yaml
autonomous_agent/launch/: trader.launch  worker.launch
autonomous_agent/scripts/: trader_node  worker_node
drone_control_system/: CMakeLists.txt  setup.py
drone_control_system/msg/: RunLiability.msg
drone_control_system/src/drone_control_system/: nodes.py  traking_thread.py
drone_control_system/srv/: FileName.srv
launch/: fly_by_points.launch  manager.launch
msg/: FinalizeLiability.msg
scripts/: run_fly_service
src/drone_control_system/: drone_manager.py  traking_thread.py
src/wp_test/: fly_by_local_points_service.py  nodes.py
wp_test/: package.xml  points  setup.py
