<?xml version="1.0"?>
<package format="2">
  <name>drone_control_system</name>
  <version>0.1.0</version>
  <description>The drone_control_system package</description>
  <maintainer email="vadim.razorq@gmail.com">Vadim Manaenko</maintainer>
  <license>BSD3</license>


  <build_depend>message_generation</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
